Fix alignment issues

--- a/webroot/style.css
+++ b/webroot/style.css
@@ -13,11 +13,20 @@ body {
   .zoomist-container {
     height:100%;
     width: 100%;
+    background-color: yellow;
+    text-align:center;
   }
-
+/*
   .zoomist-container img {
     height: 460.8px;
     width: 100%;
+    object-fit: contain;
+  }
+*/
+
+  .zoomist-container img {
+    height: 460.8px;
+    width: 344px;
     object-fit: contain;
   }
 
